<resources>
    <string name="app_name">ROM Settings</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Quick Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="title_hardwarekeys">Hardware Keys</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="header_lock_clock_title">Lock Clock Widget</string>
    <string name="title_ribbon">Ribbon</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="header_lockscreen">LockScreen</string>
    <string name="menu_main_activity_change_locale">Blank</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Quick Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="ribbon_settings_title">Ribbon</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_lock_clock_summary">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_hardware_keys">@null</string>
    <string name="pie_controls_summary">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="ribbon_settings_summary">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="title_show_power_saver">Power saver</string>
    <string name="title_show_screenshot">Show Screenshot</string>
    <string name="title_show_torch_toggle">Torch toggle</string>
    <string name="title_show_airplane_toggle">Airplane toggle</string>
    <string name="title_show_navbar_hide">Navigation bar toggle</string>
    <string name="power_menu_reboot_title">Reboot menu</string>
    <string name="power_menu_silent_title">Sound panel</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="summary_expanded_desktop">%1$s</string>
    <string name="expanded_desktop_summary">Show or change expanded desktop mode</string>
    <string name="expanded_desktop_disabled">Off</string>
    <string name="expanded_desktop_only_nav_bar">Hide navigation bar</string>
    <string name="expanded_desktop_only_status_bar">Hide status bar</string>
    <string name="expanded_desktop_both_hidden">Hide navigation and status bar</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on long press</string>
    <string name="spen_enable">Enable S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen Extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">Enable S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="title_pref_powersaving_pref_mode">Enable power saver</string>
    <string name="summary_pref_powersaving_pref_mode">@null</string>
    <string name="title_pref_powersaving_data_screen_off">Screen off data action</string>
    <string name="summary_pref_powersaving_data_screen_off">What to do with the data when the screen turns off</string>
    <string name="title_pref_powersaving_data_screen_off_delay">Data action delay</string>
    <string name="summary_pref_powersaving_data_screen_off_delay">How long to wait before applying data action?</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="navbar_cat">NavBar</string>
    <string name="bootani_cat">Boot Animation</string>
    <string name="notification_cat">Notification</string>
    <string name="display_cat">Display</string>
    <string name="recents_cat">Recents</string>
    <string name="tabletUI_cat">Tablet UI</string>
    <string name="enable_volume_options">Enable Volume Panel</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="custom_bootanimation_title">Custom boot animation</string>
    <string name="custom_bootanimation_summary">Select a custom zip from sdcard to use as your new boot animation</string>
    <string name="install_file_manager_error">No application found to pick the zip file. Please install a file manager.</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="alpha_dialog_title">Set alpha value</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In statusbar while typing</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charger</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if a charger is plugged/unplugged.</string>
    <string name="system_power_crt_screen_off_title">CRT Screen Off</string>
    <string name="system_power_crt_screen_off_summary">Screen will animate an Electron Beam when turned off</string>
    <string name="system_power_crt_mode_title">CRT animation mode</string>
    <string name="system_power_crt_mode_dialog_title">Show CRT animation</string>
    <string name="system_power_crt_mode_horizontal">Portrait horizontal</string>
    <string name="system_power_crt_mode_vertical">Portrait vertical</string>
    <string name="system_power_crt_mode_both">Orientation dependent</string>
    <string name="lefty_mode_title">Lefty Mode</string>
    <string name="lefty_mode_summary">Swap NavBar location (requires UI restart)</string>
    <string name="rotate_180_title">Allow 180 degree rotation</string>
    <string name="rotate_270_title">Allow 270 degree rotation</string>
    <string name="rotate_270_summary">Allow your device to rotate to right side!</string>
    <string name="tablet_ui">Force Tablet UI</string>
    <string name="tablet_ui_summary">This will switch to Tablet UI (requires reboot)</string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some systembar stuff i.e. the compat. mode button</string>
    <string name="bootanimation_preview">Bootanimation preview</string>
    <string name="apply">Apply</string>
    <string name="clear_custom_bootanimation">Clear custom boot animation</string>
    <string name="set_custom_bootanimation">Set custom...</string>
    <string name="creating_preview">Creating preview...</string>
    <string name="error_reading_zip_file">Error reading zip file</string>
    <string name="error_creating_preview">Error creating preview</string>
    <string name="multipane_ui">Enable Dual Panel</string>
    <string name="multipane_ui_summary">Checking this will enable the Dual Panel (Tablet) UI used by certain apps</string>
    <string name="show_overflow_title">Show Menu UI Overflow</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">Allows you to slide your finger along the top of the statusbar to change the brightness\nOnly active if auto-brightness is disabled</string>
    <string name="user_mode_ui">UI Mode</string>
    <string name="user_mode_ui_summary">Choose the style of the NavBar and Statusbar</string>
    <string name="navigation_bar_alpha_title">Statusbar and Navigation Bar opacity</string>
    <string name="interface_navring_settings_title">Navigation Ring</string>
    <string name="interface_navring_settings_summary">@null</string>
    <string name="hardware_keys_title">Hardware keys</string>
    <string name="screenshot_options">Screenshot options</string>
    <string name="screenshot_sound_title">Screenshot sound</string>
    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
    <string name="screenshot_delay_title">Screenshot delay</string>
    <string name="screenshot_delay_summary">Delays shot by number of seconds specified</string>
</resources>