<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="bootani"
        android:title="@string/bootani_cat">

        <Preference
            android:key="custom_bootanimation"
            android:title="@string/custom_bootanimation_title"
            android:summary="@string/custom_bootanimation_summary" />

         <CheckBoxPreference
            android:key="disable_bootanimation"
            android:title="@string/disable_bootanimation_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification"
        android:title="@string/notification_cat">

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <Preference
            android:key="notification_wallpaper"
            android:title="@string/notification_wallpaper_title"
            android:summary="@string/notification_wallpaper_summary" />

        <Preference
            android:key="notification_wallpaper_alpha"
            android:title="@string/notif_wallpaper_alpha_title" />

        <CheckBoxPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="vibrate_notif_expand"
            android:title="@string/vibrate_notif_expand_title"
            android:summary="@string/vibrate_notif_expand_summary" />

        <CheckBoxPreference
            android:key="statusbar_brightness_slider"
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary" />

        <com.thinkingbridge.customized.widgets.SeekBarPreference
            android:key="navigation_bar_alpha"
            android:title="@string/navigation_bar_alpha_title" />

    </PreferenceCategory>

        <ListPreference
            android:key="user_mode_ui"
            android:title="@string/user_mode_ui"
            android:summary="@string/user_mode_ui_summary"
            android:entries="@array/user_mode_ui_entries"
            android:entryValues="@array/user_mode_ui_values" />

       <CheckBoxPreference
            android:key="hide_extras"
            android:title= "@string/hide_extras"
            android:summary= "@string/hide_extras_summary"
            android:defaultValue="false" />

     <PreferenceCategory
            android:key="misc"
            android:title="@string/misc_short">

         <CheckBoxPreference
            android:key="rotate_180"
            android:title="@string/rotate_180_title"
            android:summary="@string/rotate_180_summary" />

        <CheckBoxPreference
            android:key="ime_switcher"
            android:title="@string/ime_switcher_title"
            android:summary="@string/ime_switcher_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
