<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- System -->   
    <header android:title="@string/user_interface" />

    <header
        android:id="@+id/user_interface"
        android:fragment="com.aokp.romcontrol.fragments.UserInterface"
        android:title="@string/general_ui"
        android:icon="@drawable/ic_thinkingbridge_general_ui"
        android:summary="@string/header_summary_general_ui" />

    <header
        android:id="@+id/power_menu"
        android:fragment="com.aokp.romcontrol.fragments.PowerMenu"
        android:title="@string/power_menu"
        android:icon="@drawable/ic_thinkingbridge_power_menu"
        android:summary="@string/header_summary_power_menu" />

     <header
        android:id="@+id/nav_bar"
        android:fragment="com.aokp.romcontrol.fragments.Navbar"
        android:title="@string/nav_bar"
        android:icon="@drawable/ic_thinkingbridge_navigation_bar"
        android:summary="@string/header_summary_navigation_bar" />
     
     <header
        android:id="@+id/nav_ring"
        android:fragment="com.aokp.romcontrol.fragments.NavRingTargets"
        android:icon="@drawable/ic_rom_control_navigation_ring"
        android:title="@string/interface_navring_settings_title"
        android:summary="@string/interface_navring_settings_summary" />
     
     <header
        android:id="@+id/hardware_keys"
        android:fragment="com.aokp.romcontrol.fragments.HardwareKeys"
        android:title="@string/hardware_keys_title"
        android:icon="@drawable/ic_thinkingbridge_hardware_keys"
        android:summary="@string/header_summary_hardware_keys" />
     
     <header
         android:id="@+id/pie_control"
         android:icon="@drawable/ic_thinkingbridge_pie"
         android:fragment="com.aokp.romcontrol.fragments.Pie"
         android:title="@string/pie_controls_title"
         android:summary="@string/pie_controls_summary" />
     
     <!-- Statusbar -->   

     <header
        android:id="@+id/ribbon_targets"
        android:fragment="com.aokp.romcontrol.fragments.RibbonTargets"
        android:icon="@drawable/ic_rom_control_ribbon"
        android:title="@string/ribbon_settings_title"
        android:summary="@string/ribbon_settings_summary" />

    <header
        android:id="@+id/statusbar"
        android:title="@string/header_statusbar" />

    <header
        android:id="@+id/statusbar_toggles"
        android:title="@string/toggles_layout"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarToggles"
        android:icon="@drawable/ic_thinkingbridge_quick_settings"
        android:summary="@string/header_summary_toggles" />
    
    <header
        android:id="@+id/statusbar_battery"
        android:title="@string/battery"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarBattery"
        android:icon="@drawable/ic_thinkingbridge_battery"
        android:summary="@string/header_summary_battery" />

    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarClock"
        android:summary="@string/header_summary_clock"
        android:icon="@drawable/ic_thinkingbridge_clock"
        android:title="@string/clock" />

    <header
        android:id="@+id/statusbar_signal"
        android:title="@string/signal"
        android:fragment="com.aokp.romcontrol.fragments.StatusBarSignal"
        android:icon="@drawable/ic_thinkingbridge_signal"
        android:summary="@string/header_summary_signal" />
     
     <!-- LockScreen -->
     <header
        android:id="@+id/lockscreen"
        android:title="@string/header_lockscreen" />
     
     <header
        android:id="@+id/lockscreen"
        android:fragment="com.aokp.romcontrol.fragments.Lockscreens"
        android:title="@string/lockscreen_options"
        android:icon="@drawable/ic_thinkingbridge_lockscreens"
        android:summary="@string/header_summary_lockscreens" />
        
    <header
        android:id="@+id/lockscreen_lock_clock"
        android:summary="@string/header_lock_clock_summary"
        android:icon="@drawable/ic_thinkingbridge_lockclock"
        android:title="@string/header_lock_clock_title" >
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.cyanogenmod.lockclock"
            android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
    </header>

    <header
        android:id="@+id/system"
        android:title="@string/header_system" />

    <header
        android:id="@+id/led"
        android:fragment="com.aokp.romcontrol.fragments.LEDControl"
        android:title="@string/led_options"
        android:icon="@drawable/ic_thinkingbridge_led"
        android:summary="@string/header_summary_led" />

    <header
        android:id="@+id/spen"
        android:fragment="com.aokp.romcontrol.fragments.SPenGestures"
        android:title="@string/spen_options"
        android:icon="@drawable/ic_rom_control_spen"
        android:summary="@string/header_summary_spen" />

    <header
        android:id="@+id/sound"
        android:fragment="com.aokp.romcontrol.fragments.Sound"
        android:title="@string/sound"
        android:icon="@drawable/ic_thinkingbridge_sound"
        android:summary="@string/header_summary_sound" />

</preference-headers>
