<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!--
    <CheckBoxPreference android:key="show_screenshot"
        android:title="@string/title_show_screenshot" />

    <CheckBoxPreference android:key="show_power_saver"
        android:title="@string/title_show_power_saver" />

    <CheckBoxPreference android:key="show_torch_toggle"
        android:title="@string/title_show_torch_toggle" />

    <CheckBoxPreference android:key="show_airplane_toggle"
        android:title="@string/title_show_airplane_toggle" />
-->

    <CheckBoxPreference 
        android:key="show_navbar_hide"
        android:title="@string/title_show_navbar_hide" />

    <CheckBoxPreference 
        android:key="show_airplane_toggle"
        android:title="@string/title_show_airplane_toggle" />
        
    <CheckBoxPreference
        android:key="power_menu_reboot"
        android:title="@string/power_menu_reboot_title" />
        
    <CheckBoxPreference
        android:key="power_menu_silent"
        android:title="@string/power_menu_silent_title" />
    
    <ListPreference
        android:key="power_menu_expanded_desktop"
        android:title="@string/power_menu_expanded_desktop"
        android:entries="@array/expanded_desktop_entries"
        android:entryValues="@array/expanded_desktop_values"
        android:persistent="false" />
    
    <PreferenceCategory
        android:title="@string/screenshot_options">

        <CheckBoxPreference android:key="show_screenshot"
            android:title="@string/title_show_screenshot" />

        <CheckBoxPreference
            android:key="pref_screenshot_sound"
            android:title="@string/screenshot_sound_title"
            android:summary="@string/screenshot_sound_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="pref_screenshot_delay"
            android:dialogTitle="@string/screenshot_delay_title"
            android:title="@string/screenshot_delay_title"
            android:summary="@string/screenshot_delay_summary"
            android:entries="@array/pref_screenshot_delay_entries"
            android:entryValues="@array/pref_screenshot_delay_values"
            android:defaultValue="1000" />
        
    </PreferenceCategory>

    <CheckBoxPreference
        android:key="pie_restart_launcher"
        android:title="@string/pie_restart_launcher_title"
        android:summary="@string/pie_restart_launcher_summary" />

</PreferenceScreen>
